--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/notonthehighstreet/cc3f5205-5187-4ff8-a150-d02ce5552748'>Notonthehighstreet - iOS Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/notonthehighstreet/cc3f5205-5187-4ff8-a150-d02ce5552748'>Notonthehighstreet - iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Richmond London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -102,7 +102,7 @@
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/anchorfree/jobs/1930931'>Job Application for Senior iOS Engineer (Enterprise Security) at Pango Inc. </a></h5> 
+<h5><a href='https://boards.greenhouse.io/anchorfree/jobs/1930931'>Job Application for Senior iOS Engineer (Enterprise Security) at Pango Inc. </a></h5> 
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -126,7 +126,7 @@
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/takealotcom/jobs/1929134'>Job Application for iOS Software Engineer - Mr D Food at takealot.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/takealotcom/jobs/1929134'>Job Application for iOS Software Engineer - Mr D Food at takealot.com</a></h5> 
 <p><span class="badge badge-light">Cape Town  Cape Town</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -186,12 +186,12 @@ like? mobile applications. ? Experience with e-commerce applications in a?...</p
 <p>3 days ago ... You must be a passionate and experienced iOS developer who loves building 
 user facing iOS apps from scratch. You are proud of your code and can?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://farmdrop.workable.com/jobs/1157445'>Senior iOS Software Engineer - Farmdrop</a></h5> 
+<h5><a href='https://farmdrop.workable.com/jobs/1157445'>Senior iOS Software Engineer - Farmdrop</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 9, 2019 ... Are you a highly regarded talented Senior iOS Software Engineer with a passion 
 for delivering high quality applications that help change the world? Then we?...</p>
 <hr/>
-<h5><a href='https://starling-bank.workable.com/j/4141EB8A4B?viewed=true'>iOS Engineer (Southampton) - Apply online - Starling Bank - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://starling-bank.workable.com/j/4141EB8A4B?viewed=true'>iOS Engineer (Southampton) - Apply online - Starling Bank - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of iOS Engineer (Southampton) at Starling Bank.</p>
 <hr/>
@@ -220,7 +220,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/thredup/4b26f9f3-bc97-4dd7-9f5c-755d39628523'>thredUP - Senior iOS Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thredup/4b26f9f3-bc97-4dd7-9f5c-755d39628523'>thredUP - Senior iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Kiev, Ukraine</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -294,7 +294,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/trunkclub/jobs/1840598?gh_src=o3unj4'>Job Application for iOS Engineer at Trunk Club</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/trunkclub/jobs/1840598?gh_src=o3unj4'>Job Application for iOS Engineer at Trunk Club</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Working for Trunk Club. When you join Trunk Club, you join the Nordstrom family. 
 Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
@@ -435,11 +435,11 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999696669650-senior-ios-engineer'>4Catalyzer Senior iOS Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999696669650-senior-ios-engineer'>4Catalyzer Senior iOS Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang2/jobs/1902024'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang(TECH)</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang2/jobs/1902024'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang(TECH)</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
